Nurbs curve vertex radius wrong subdivision #76062

Closed
opened 2020-04-24 18:16:06 +02:00 by Vyacheslav Kobozev · 9 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.83 (sub 14), branch: master, commit date: 2020-04-23 08:25, hash: 8dedbb1747
Worked: (newest version of Blender that worked as expected)

Short description of error
When I subdivide between zero radius vertex and non-zero on nurbs-curve, I get zero radius instead average radius.
2020-04-24_18-34-42.mp4
Nurbs curve subdivide.blend

Exact steps for others to reproduce the error
Subdivide nurbs curve from file.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.83 (sub 14), branch: master, commit date: 2020-04-23 08:25, hash: `8dedbb1747` Worked: (newest version of Blender that worked as expected) **Short description of error** When I subdivide between zero radius vertex and non-zero on nurbs-curve, I get zero radius instead average radius. [2020-04-24_18-34-42.mp4](https://archive.blender.org/developer/F8492741/2020-04-24_18-34-42.mp4) [Nurbs curve subdivide.blend](https://archive.blender.org/developer/F8492742/Nurbs_curve_subdivide.blend) **Exact steps for others to reproduce the error** Subdivide nurbs curve from file.

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This looks like a bug to me but I have no experience in this area of the code.

This looks like a bug to me but I have no experience in this area of the code.
Member

Thanks for the report! I made a quick patch that solves your problem: D7523

Thanks for the report! I made a quick patch that solves your problem: [D7523](https://archive.blender.org/developer/D7523)

@HooglyBoogly
Thanks!

@HooglyBoogly Thanks!

This issue was referenced by 133c2381ec

This issue was referenced by 133c2381ec7829578fb1652d0b6cbfe8bf314249

This issue was referenced by 7212dbd7be

This issue was referenced by 7212dbd7be8d69f1fea5c918d820796641197417
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-05-01 23:50:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76062
No description provided.