Fix T76062: Interpolate Radius in Curve Subdivide Special Case

Differential Revision: https://developer.blender.org/D7523